@@ -1,4 +1,5 @@
 Changes towards version 0.8:
+- Added aspect ratio option to the setup menu - Alex
 - Added speech option which controls loading of 3dovoice addon (no need
   to set speech volume to 0 anymore) - Alex
 - Added the MetaChron story to the no-voice Melnorme script (bug #43) - Alex
